"Join the team" images more correctly aligned

--- a/co-op/css/index.css
+++ b/co-op/css/index.css
@@ -213,6 +213,10 @@ footer {
     display: block;
 }
 
+.join-team-small {
+    width: 335px;
+    height: 205px
+}
 .carousel-control-prev-icon {
     background-image: url(../images/chevron-left.png);
 }
